syntax = "proto3";
package email.admin;

service Admin {
  rpc GetTemplates(AdminRequest) returns (AdminResponse);
  rpc CreateTemplate(AdminRequest) returns (AdminResponse);
  rpc EditTemplate(AdminRequest) returns (AdminResponse);
  rpc SendEmail(AdminRequest) returns (AdminResponse);
}

// all admin requests accept the params,headers and context objects as stringified json
message AdminRequest {
  string params = 1;
  string headers = 2;
  string context = 3;
}
// all admin responses return their results as stringified json
message AdminResponse {
  string result = 1;
}
